--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:5000/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +12,7 @@
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "socket.io-client": "^4.8.0",
     "vue": "^3.2.13",
     "vue-router": "^4.4.5"
   },
