--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.8.3",
     "cors": "^2.8.5",
+    "popper.js": "^1.16.1",
     "socket.io-client": "^4.8.0",
     "uuid": "^10.0.0",
     "vue": "^3.2.13",
