--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,9 @@ services:
       context: ./frontend
     ports:
       - "8000:8000"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     restart: always
 
   backend:
@@ -12,6 +15,9 @@ services:
     ports:
       - "3000:3000"
       - "5000:5000"
+    volumes:
+      - ./backend:/app
+      - /app/node_modules
     restart: always
 
   bdd:
