--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,24 @@
-FROM node:16-alpine
+FROM node:16
 
-# Définit le répertoire de travail
+# Install nodemon globally
+RUN npm install -g nodemon
+
+# Set the working directory
 WORKDIR /app
 
-# Copie uniquement les fichiers nécessaires pour installer les dépendances
-COPY package.json package-lock.json ./
+# Copy package.json and package-lock.json
+COPY package*.json /app/
+
+
+# Install dependencies
 RUN npm install
 
-# Copie le reste du code de l'application
+# Copy the rest of the application code
 COPY . .
 
-# Expose les ports nécessaires
+# Expose the necessary ports
 EXPOSE 3000
 EXPOSE 5000
 
-# Commande par défaut pour démarrer l'application
-CMD ["node", "app.js"]
+# Default command to start the application
+CMD ["nodemon", "--watch", ".", "-L", "--ext", "js,vue,json", "--exec", "node", "app.js"]
