--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,18 +2,15 @@ FROM node:16
 
 # Install nodemon globally
 RUN npm install -g nodemon
-
 # Set the working directory
 WORKDIR /app
 
 # Copy package.json and package-lock.json
 COPY package*.json /app/
-
-
 # Install dependencies
 RUN npm install
 
-
+# Copy the rest of the application code
 COPY . .
 
 # Expose the necessary ports
