--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    networks:
+      - frontend_backend
+
   backend:
     build:
       context: ./backend
@@ -16,6 +19,9 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
+    networks:
+      - frontend_backend
+      - backend_db
 
   bdd:
     image: mongo:6.0
@@ -23,7 +29,15 @@ services:
       - "27017:27017"
     volumes:
       - mongo-data:/data/db
+    networks:
+      - backend_db
 
 volumes:
   mongo-data:
+
+networks:
+  frontend_backend:
+    driver: bridge
+  backend_db:
+    driver: bridge
 
